--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-.venv/
 __pycache__/
+.venv/
+.env
 *.pyc
-*.pyo
-*.pyd
-.Python
-env/
-build/
-dist/
-.eggs/
-*.egg-info/
-.DS_Store
 .vscode/
-data/purchases.csv
-*.ps
-*.psd
+.idea/
