--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.27.2
-pandas==2.0.3
-pillow==9.5.0
-altair==5.0.1
+wheel==0.41.3
+setuptools==69.0.2
+streamlit==1.24.0
+pandas==1.5.3
+pillow==9.4.0
+altair==4.2.2
 python-dateutil==2.8.2
