--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-wheel==0.41.3
-setuptools==69.0.2
-streamlit==1.24.0
+streamlit==1.22.0
 pandas==1.5.3
-pillow==9.4.0
-altair==4.2.2
+pillow==9.3.0
+altair==4.2.0
 python-dateutil==2.8.2
+numpy==1.23.5
